Upgrading Ansible Playbook

--- a/Ansible-HDP-Automation/cluster_playbook.yaml
+++ b/Ansible-HDP-Automation/cluster_playbook.yaml
@@ -7,10 +7,10 @@
     - variables.yaml
   roles:
       - prerequisites
-      - setup_ambari_slaves
+      - setup_ambari_agent
 
 
-- hosts: master_nodes
+- hosts: ambari_node
   become: true
   vars_files:
     - variables.yaml
