--- a/Ansible-HDP-Automation/hosts.ini
+++ b/Ansible-HDP-Automation/hosts.ini
@@ -2,13 +2,18 @@
 # Hosts_list
 #
 
+[ambari_node]
+srk-ambari.field.hortonworks.com
+
+
 [master_nodes]
 srk-master.field.hortonworks.com
 
 
 [slave_nodes]
-srk-slave.field.hortonworks.com
-
+srk-slave-1.field.hortonworks.com
+srk-slave-2.field.hortonworks.com
+srk-slave-3.field.hortonworks.com
 
 
 
@@ -27,4 +32,3 @@ srk-slave.field.hortonworks.com
 # [node_managers]
 
 # [client_nodes]
-
