--- a/Ansible-HDP-Automation/roles/setup_hdp/tasks/main.yml
+++ b/Ansible-HDP-Automation/roles/setup_hdp/tasks/main.yml
@@ -15,19 +15,25 @@
     - HDP-UTILS Repository File
     - Host Template File
 
+- name: "Replacing Extra Commas in Host_Mapping.json"
+  replace:
+    path: /tmp/Host_Mapping.json
+    regexp: '},]'
+    replace: '}]'
+    backup: yes
 
-- name: Register Cluster Configuration Blueprint with ambari server by executing below command
+- name: Register Stack Definition with ambari server by executing below command
   shell: |
-        curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://{{ ambari_server }}:8080/api/v1/blueprints/two-node-hdp -d @/tmp/Blueprint.json
+        curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://{{ groups["ambari_node"][0] }}:8080/api/v1/blueprints/two-node-hdp -d @/tmp/Blueprint.json
 
 - name: Setup HDP repo via REST API.
   shell: |
-        curl -H "X-Requested-By: ambari" -X PUT -u admin:admin http://{{ ambari_server }}:8080/api/v1/stacks/HDP/versions/2.6/operating_systems/redhat6/repositories/HDP-2.6.1.0 -d @/tmp/HDP.json
+        curl -H "X-Requested-By: ambari" -X PUT -u admin:admin http://{{ groups["ambari_node"][0] }}:8080/api/v1/stacks/HDP/versions/2.6/operating_systems/redhat6/repositories/HDP-2.6.1.0 -d @/tmp/HDP.json
 
 - name: Setup HDP-UTILS repo via REST API.
   shell: |
-        curl -H "X-Requested-By: ambari" -X PUT -u admin:admin http://{{ ambari_server }}:8080/api/v1/stacks/HDP/versions/2.6/operating_systems/redhat6/repositories/HDP-UTILS-1.1.0.21 -d @/tmp/HDP-UTILS.json
+        curl -H "X-Requested-By: ambari" -X PUT -u admin:admin http://{{ groups["ambari_node"][0] }}:8080/api/v1/stacks/HDP/versions/2.6/operating_systems/redhat6/repositories/HDP-UTILS-1.1.0.21 -d @/tmp/HDP-UTILS.json
 
-- name: Starting HDP cluster Installation.
+- name: Starting HDP cluster Installation using Component Layout
   shell: |
-        curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://{{ ambari_server }}:8080/api/v1/clusters/Ansible_Cluster -d @/tmp/Host_Mapping.json
+        curl -H "X-Requested-By: ambari" -X POST -u admin:admin http://{{ groups["ambari_node"][0] }}:8080/api/v1/clusters/Ansible_Cluster -d @/tmp/Host_Mapping.json
